updating requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,18 @@
-aiohttp==3.8.1
-aiosignal==1.2.0
-altgraph==0.17.3
+aiohttp==3.8.3
+aiosignal==1.3.1
+asgiref==3.5.2
 async-timeout==4.0.2
 attrs==22.1.0
 charset-normalizer==2.1.1
-colorama==0.4.5
-colorlog==6.6.0
-frozenlist==1.3.1
-future==0.18.2
-hikari==2.0.0.dev110
-hikari-lightbulb==2.2.4
-idna==3.3
-multidict==6.0.2
-pefile==2022.5.30
-pyinstaller==5.7.0
-pyinstaller-hooks-contrib==2022.14
-pywin32-ctypes==0.2.0
-yarl==1.8.1
+colorama==0.4.6
+colorlog==6.7.0
+Django==4.1.3
+frozenlist==1.3.3
+hikari==2.0.0.dev113
+hikari-lightbulb==2.3.0
+idna==3.4
+multidict==6.0.3
+Pillow==9.3.0
+sqlparse==0.4.3
+tzdata==2022.6
+yarl==1.8.2
