--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 aiohttp==3.8.3
 aiosignal==1.3.1
+altgraph==0.17.3
 asgiref==3.5.2
 async-timeout==4.0.2
 attrs==22.1.0
@@ -8,11 +9,16 @@ colorama==0.4.6
 colorlog==6.7.0
 Django==4.1.3
 frozenlist==1.3.3
+future==0.18.2
 hikari==2.0.0.dev113
 hikari-lightbulb==2.3.0
 idna==3.4
 multidict==6.0.3
+pefile==2022.5.30
 Pillow==9.3.0
+pyinstaller==5.7.0
+pyinstaller-hooks-contrib==2022.14
+pywin32-ctypes==0.2.0
 sqlparse==0.4.3
 tzdata==2022.6
 yarl==1.8.2
